--- a/README.Rmd
+++ b/README.Rmd
@@ -9,6 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+file.copy("notebook/book/docs/notebook.html", "docs/notebook.html")
 ```
 
 # notestar-demo
@@ -16,13 +17,19 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Steps I used to make this demo.
+An example analysis notebook created with
+[notestar](https://github.com/tjmahr/notestar). The notebook can be [previewed
+here](http://www.tjmahr.com/notestar-demo/notebook.html).
+
+***
+
+Steps I used to make this demo from scratch.
 
 1.  Create a new project in RStudio with git repository.
 
 2.  Performed first git commit.
 
-3.  `usethis::use_readme_rmd()` to start taking notes.
+3.  `usethis::use_readme_rmd()` to start writing down these steps.
 
 4.  `notestar::use_notestar()` and `notestar:::use_notestar_makefile()`
 
@@ -45,15 +52,21 @@ notestar::notebook_create_page(date = "2021-04-12", slug = "models")
 
 9.  `notestar::notebook_browse()` to view the notebook.
 
-10. commit files and create repository with `usethis::use_github()`
+Iterating on steps 5--10 is the main flow for the notebook. We set up data and
+modeling things in `_targets` and explore/report them in notebook entries.
 
+10. Committed files and create repository with `usethis::use_github()`
+
+11. Added link to repository to index.Rmd.
+
+12. Copied the `notebook.html` file into `docs/` so that it could be 
+    previewed with Github Pages.
 
 *** 
 
-Here is how the data/modeling flow into the notebook entries and into the final
-notebook.
+How the data/modeling flow into the notebook entries and into the final
+notebook:
 
 ```{r graph, dpi = 144}
 targets::tar_visnetwork(targets_only = TRUE)
 ```
-
